Correction des effets de bords de dernière résolution de conflits
[JTA/JAE] : Correction des effets de bords de la dernière résolution de conflits non vérifiée